# Molten

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: ARCHITECTURE.md  PLUGIN-API.md  SPEC.md
src/: App.css  App.tsx  main.tsx  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_server.rs  capture.rs  commands.rs  config.rs  lib.rs  main.rs  pty.rs
src-tauri/tmux-shim/: tmux
src/components/: RippleEffect.css  RippleEffect.tsx
src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx
src/components/Dock/: DockLayout.css  DockLayout.tsx  index.ts
src/components/KeybindingGuide/: KeybindingGuide.css  KeybindingGuide.tsx  index.ts
src/components/Notification/: NotificationPanel.css  NotificationPanel.tsx
src/components/QuickCommand/: QuickCommand.css  QuickCommand.tsx  index.ts
src/components/Settings/: SettingsModal.css  SettingsModal.tsx
src/components/Sidebar/: SessionItem.tsx  index.ts  (+3 more)
src/hooks/: useSessionNotifications.ts  useSettingsPersistence.ts  useWorkspacePersistence.ts
src/stores/: layoutStore.test.ts  layoutStore.ts  messageBusStore.ts  notificationStore.test.ts  notificationStore.ts  quickCommandStore.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.ts  triggerStore.ts  workspaceStore.test.ts  workspaceStore.ts
src/types/: index.ts
src/utils/: commandServer.ts  eventBus.test.ts  eventBus.ts  selfCapture.ts  statusDetector.test.ts  statusDetector.ts  terminalManager.ts  triggerEngine.ts  workspacePersistence.ts
(+9 files in other folders)
