[package]
name = "molten"
version = "0.1.0"
description = "The liquid terminal for AI coding agents"
authors = ["glowElephant"]
edition = "2021"

[lib]
name = "molten_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
] }
